src/App.css
/* NOTE: Use 'styled-components' instead of too many global css */

html,
body {
  height: 100vh;
  display: flex;
}
body {
  flex: 1;
}

#root {
  flex: 1;
  display: flex;
}

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #efefef;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

h1 {
  font-size: 1.5rem;
  line-height: 1.4;
  font-weight: 400;
  text-align: center;
  color: #fdb23c;
}

h1,
h2,
h3 {
  font-weight: 400;
}

.walletName {
  float: left;
  padding: 10px 15px;
  margin-top: -20px;
  margin-right: 15px;
  margin-left: 15px;
  border-radius: 3px;
  color: white;
  background: linear-gradient(60deg, #ffa726, #fb8c00);
  box-shadow: 0 12px 20px -10px rgba(255, 152, 0, 0.28),
    0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 152, 0, 0.2);
}

.emptyIcon {
  width: 24px;
}

.alert svg {
  margin-right: 0.2rem;
  margin-top: -5px;
}

.sealerKey {
  width: 100%;
}

.word-wrap-break {
  word-wrap: break-word !important;
}

.word-break-all {
  word-break: break-all !important;
}

.confirmDialog {
  min-width: 320px;
}

button:focus {
  outline: none;
}

button[disabled] {
  opacity: 0.5;
}

